@@ -1,3 +1,6 @@
+8 May 2012: Wouter
+	- Fix for accept spinning reported by OpenBSD.
+
 2 February 2012: Wouter
 	- 1.4.16 release tag.
 
